Implemented Friend Request process

--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   "homepage": "https://github.com/tanveersidiq/tsbb#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.1",
-    "mongoose": "^4.8.6"
+    "jsonwebtoken": "^7.3.0",
+    "mysql": "^2.13.0",
+    "sequelize": "^3.30.2",
+    "tedious": "^1.14.0"
   },
   "devDependencies": {
     "bower": "^1.8.0"
