--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,8 @@
     "angular-route": "^1.6.2",
     "angular-loading-bar": "^0.9.0",
     "toastr": "^2.1.3",
-    "angular-toastr": "^2.1.1"
+    "angular-toastr": "^2.1.1",
+    "angular-bootstrap": "^2.5.0",
+    "angular-local-storage": "^0.5.2"
   }
 }
