Added Cloud Formation tempaltes

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Bulletin & Board for Crossover.",
   "main": "server.js",
   "scripts": {
+    "start": "node server",
+    "zip": "zip --exclude=node_modules/* -r startup-kit-nodejs.zip *",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
